# qarma

./: .gitignore  .travis.yml  CMakeLists.txt  PKGBUILD  Qarma.cpp  Qarma.h  README.md  qarma.desktop  qarma.pro
.github/workflows/: build.yml
qarma-zenity/: PKGBUILD
